--- a/seds_website/index.html
+++ b/seds_website/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <title>SEDS-VITAP</title>
     <meta name="description" content="SEDS Aurora or SEDS-VITAP is a part of SEDS India, a student based organization which promotes the exploration and developement of space. SEDS is working at the forefront of making Space Exploration a popular hobby and develop students interest in the field as a viable future career option.">
@@ -33,7 +34,7 @@
         <header class="viewport-header">
             <div> <img id="Main_logo" src="images/logo (2).png" alt="SEDS_LOGO"></div>
             <div id="Main_text">
-                <h1 id="SEDS_Name">SEDS VIT-&nbsp;AP</h1>
+                <h1 style="font-weight: 500;" id="SEDS_Name">SEDS VIT-&nbsp;AP</h1>
                 <h5 id="Seds_fullform">( Students for the Exploration and Development of Space )</h5>
             </div>
         </header>
@@ -55,7 +56,7 @@
     </div>
     <div class="container-fluid row containerx" id="#container2" style="margin: 0 auto;background-color:#15173d;">
         <div class="about" style="width: 100% ;background:rgba(0, 0, 0, 0.5);background-position: center;background-size: cover;background-repeat: no-repeat;padding: 50px 8vw 50px 8vw;text-align: center;color:white;">
-            <h1 style="color: white;">About us</h1>
+            <h1 style="font-weight: bold;color: white;">About us</h1>
             <p style="font-size: 18px;">SEDS Aurora or SEDS-VITAP is a part of SEDS India, a student based organization which promotes the exploration and developement of space. SEDS is working at the forefront of making Space Exploration a popular hobby and develop students interest
                 in the field as a viable future career option. SEDS provides an organized pathway for students to begin space related projects and give them a chance to break away from just the usual class-work. SEDS also helps as a stepping stone to
                 a space-related career. We at SEDS India have three divisions working in three directions: Core, Outreach and Projects. Our Core Team which believes in the mantra of 'learning' has been organizing various guest lectures and activities
@@ -110,12 +111,12 @@
         </div>
     </section>
     <style>
-        @media(min-width:560px){.txt{width: 300px;padding-top: 45px;}.coord img{height: 250px;max-width: 190px;}.coord{width: 35vw;}}
-        @media(max-width:559px){.txt{padding-top: 30px;}.coord{padding-left: 15px;}.coord img{width: 100%;}}
+        @media(min-width:560px){.txt{width: 300px;padding-top: 45px;}.coord{width: 35vw;}}
+        @media(max-width:559px){.txt{padding-top: 30px;}.coord{padding-left: 15px;}.coord img{width:40%;margin-top: 20px;}}
     </style>
     <div class="container"  style="background-color: rgba(0, 0, 0, 0.685);min-width: 100%;">
-<div class="container coord row" style="margin: 0 auto;">
-    <img class="col-5" src="images/sudhagar.jpg" alt="" style="padding: 15px;border-radius: 92.5px;">
+<div class="container coord row" style="margin: 0 auto;margin-top: 10px;">
+    <img   src="images/sudhagar.jpg" alt="" style="padding: 15px;border-radius: 107.5px;">
     <div class="txt col-7" style="width: fit-content; color: white;text-align: center;">
         <h2 style="color:white ;text-align: left;">Club Coordinator</h2>
         <div style="color:white ;text-align: left;">Name: Dr. Sudagar J</div>
