--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,13 +1,7 @@
-<?php 
-?>
-<html lang="en">
+
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=0.8">
-    <title>Bmv's Quiz</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="loginstyle.css">
+   
   </head>
 <body>
   <div class="navbar">
@@ -15,8 +9,8 @@
     <div class="details"><a href="index.php">Login/signup</a></div>
   </div>
   <div class="formcont">
-    <div id="error" style="color:red;"></div>
-  <form name="myForm" onSubmit="return(validate());" action="quiz.php" method="POST" > 
+    <div id="error"></div>
+  <form name="myForm" onSubmit="return(validate());" method="POST" > 
         <label for="Name">Name</label>
         <input type="text" name="name">
         <label for="Username">UserName</label>
