--- a/education.html
+++ b/education.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <meta name="viewport" content="width=device-width, initial-scale=0.8">
+      <meta name="viewport" content="width=device-width,  initial-scale=0.7">
         <script src="jquery-1.11.3.min.js"></script>
         <script src="bootstrap.min.js"></script>
         <link rel="icon" href="images/me.jpg">
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="bootstrap.min.css">
         <link rel="stylesheet" href="index.css">
     </head>
-    <body>
+    <body >
         <div class="container-fluid" id="container0">
             <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
               <div class="d-flex w-50 order-0">
@@ -24,11 +24,11 @@
               </div>
               <div class="collapse navbar-collapse justify-content-center order-2" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
-                  </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="education.html">Education</a>
+                    <a class="nav-link" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">Education</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="internships.html">Internships</a>
@@ -50,14 +50,41 @@
             </span>
             </nav>
           </div>
-          <div class="contanier-fluid" id="container1">
-            <div class="jumbotron">
-                <img src="images/me.jpg" class="img-fluid hovering" height="250px" width="250px" style="border-radius:125px;margin-bottom: 15px;">
-                <h1 class="display-4">C Bindhu Madhava Varma</h1>
-                <p class="lead">Student at VIT_Vellore Institute of Technology, Amaravati.</p>
-                <p>I am currently a student at VIT AP pursuing my Bachelor's degree in CSE specialization in Data Analytics. I love programming and currently working as a software team member at SEDS-Projects VIT. I like exploring
-                    about new technologies and learning new programming languages. </p>
-              </div>
+          <div class="contanier-fluid" id="container1" style="padding-top: 75px;min-height: 66vh;">
+            <div class="heading">Education Details</div>
+            <div style="padding: 3% 15% 3% 15%;">
+                <table class="table" style="color: white;text-align: left;"> 
+                    <thead>
+                      <tr>
+                        <th scope="col">Course</th>
+                        <th scope="col">Institute</th>
+                        <th scope="col">Year of completion</th>
+                        <th scope="col">CGPA</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">B.Tech (Hons.), Computer Science</th>
+                        <td>Vellore Institute Of Technology Amaravati AP</td>
+                        <td>2019 - 2023</td>
+                        <td>9.26</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Senior Secondary (XII), Science</th>
+                        <td>Sri Chaitanya Educational Institutions</td>
+                        <td>2019</td>
+                        <td>9.75</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Secondary (X)</th>
+                        <td>Jcr Chaitanya English Medium High School</td>
+                        <td>2017</td>
+                        <td>10.00</td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </div>
+            
           </div>
           <footer class="new_footer_area">
             <div class="new_footer_top" style="margin: 0 auto;width: 75vw;">
