--- a/internships.html
+++ b/internships.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <meta name="viewport" content="width=device-width, initial-scale=0.8">
+      <meta name="viewport" content="width=device-width, initial-scale=0.7">
         <script src="jquery-1.11.3.min.js"></script>
         <script src="bootstrap.min.js"></script>
         <link rel="icon" href="images/me.jpg">
@@ -24,14 +24,14 @@
               </div>
               <div class="collapse navbar-collapse justify-content-center order-2" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="education.html">Education</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="internships.html">Internships</a>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">Internships</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="trainings.html">Trainings</a>
@@ -50,14 +50,45 @@
             </span>
             </nav>
           </div>
-          <div class="contanier-fluid" id="container1">
-            <div class="jumbotron">
-                <img src="images/me.jpg" class="img-fluid hovering" height="250px" width="250px" style="border-radius:125px;margin-bottom: 15px;">
-                <h1 class="display-4">C Bindhu Madhava Varma</h1>
-                <p class="lead">Student at VIT_Vellore Institute of Technology, Amaravati.</p>
-                <p>I am currently a student at VIT AP pursuing my Bachelor's degree in CSE specialization in Data Analytics. I love programming and currently working as a software team member at SEDS-Projects VIT. I like exploring
-                    about new technologies and learning new programming languages. </p>
-              </div>
+          <div class="contanier-fluid" id="container1" style="padding-top: 75px;min-height: 66vh;">
+            <div class="heading">Internship Details</div>
+            <div id="content">
+                <table class="table" style="color: white;text-align: left;"> 
+                    <thead>
+                      <tr>
+                        <th scope="col">Company</th>
+                        <th scope="col">Role</th>
+                        <th scope="col">Duration</th>
+                        <th scope="col">Year of completion</th>
+                        <th scope="col">certificate</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">Solution Valley</th>
+                        <td>Web development Intern</td>
+                        <td>3 Months</td>
+                        <td>On going</td>
+                        <td><a target="_blank" href="pdfs/solutionvalley.pdf"  style="color: #f02c54;">click here</a></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Sparks Foundation</th>
+                        <td>Web development Intern</td>
+                        <td>1 Month</td>
+                        <td>January 2020</td>
+                        <td><a target="_blank" href="pdfs/sparks.pdf"  style="color: #f02c54;">click here</a></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">SEDS-Projects club VIT-AP</th>
+                        <td>Software team member</td>
+                        <td>1 year</td>
+                        <td>On going</td>
+                        <td>-</td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </div>
+            
           </div>
           <footer class="new_footer_area">
             <div class="new_footer_top" style="margin: 0 auto;width: 75vw;">
