--- a/profile/internships.html
+++ b/profile/internships.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="container-fluid" id="container0">
-            <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
               <div class="d-flex w-50 order-0">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -30,27 +30,27 @@
                   <li class="nav-item">
                     <a class="nav-link" href="education.html">Education</a>
                   </li>
+                  <li class="nav-item ">
+                    <a class="nav-link" href="skills.html">Skills</a>
+                  </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="#">Internships</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="trainings.html">Trainings</a>
                   </li>
-                  <li class="nav-item ">
-                    <a class="nav-link" href="skills.html">Skills</a>
-                  </li>
+                 
                 </ul>
               </div>
               <span class="navbar-text small  mt-1 w-50 text-right order-1 order-md-last d-none d-sm-none d-md-none d-lg-block">
-                <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a>
-                <a href="#" class="responsivecard fa fa-google" style="color: white;"></a>
-                <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a>
-                <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a>
-                <a href="https://api.whatsapp.com/send?phone=916309298166" target="_blank" class="responsivecard fa fa-whatsapp" style="color: white;"></a>
-            </span>
+                <a target="_blank" href="https://www.facebook.com/bindumadhava.varma/" class="responsivecard fa fa-facebook" style="color: white;"></a>
+                <a target="_blank" href="mailto:bindhu.19bcd7116@vitap.ac.in" class="responsivecard fa fa-google" style="color: white;"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/bindhu-madhav-varma-c-58140b1aa/" class="responsivecard fa fa-linkedin" style="color: white;"></a>
+                <a target="_blank" href="https://github.com/BINDHUMADHAVAVARMA" class="responsivecard fa fa-github" style="color: white;"></a>
+              </span>
             </nav>
           </div>
-          <div class="contanier-fluid" id="container1" style="padding-top: 75px;min-height: 66vh;">
+          <div class="contanier-fluid" id="container1" style="padding-top: 75px;min-height: 73vh;">
             <div class="heading">Internship Details</div>
             <div id="content">
                 <table class="table" style="color: white;text-align: left;"> 
@@ -111,24 +111,16 @@
                             <div style="float: right;">
                                 <h3 class="f-title" style="padding-left: 5px;">Contanct me</h3>
                                 <div>
-                                  <a href="#" class="responsivecard fa fa-facebook" style="color: white;"></a>
-                                  <a href="#" class="responsivecard fa fa-google" style="color: white;"></a>
-                                  <a href="#" class="responsivecard fa fa-linkedin" style="color: white;"></a>
-                                  <a href="#" class="responsivecard fa fa-instagram" style="color: white;"></a>
-                                  <a href="https://api.whatsapp.com/send?phone=916309298166" target="_blank" class="responsivecard fa fa-whatsapp" style="color: white;"></a>
-                                </div>
+                                  <a target="_blank" href="https://www.facebook.com/bindumadhava.varma/" class="responsivecard fa fa-facebook" style="color: white;"></a>
+                <a target="_blank" href="mailto:bindhu.19bcd7116@vitap.ac.in" class="responsivecard fa fa-google" style="color: white;"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/bindhu-madhav-varma-c-58140b1aa/" class="responsivecard fa fa-linkedin" style="color: white;"></a>
+                <a target="_blank" href="https://github.com/BINDHUMADHAVAVARMA" class="responsivecard fa fa-github" style="color: white;"></a>
+              </div>
                             </div>
+                            
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="footer_bottom" style="margin: 0 auto;width: 75vw;">
-                <div class="container">
-                    <div class="row" style="margin: 0 auto;">
-                        <div class="col-lg-6 col-sm-7" style="margin: 0 auto;width: min-content;">
-                            <p class="mb-0 f_400" style="width: fit-content;margin: 0 auto;">&copy; C Bindhu Madhava Varma all rights reserved 2021.</p>
-                        </div>
-                    </div>
+                    <div  style="text-align: center; padding-top: 20px;">&copy; C Bindhu Madhava Varma all rights reserved 2021.</div>
                 </div>
             </div>
           </footer>
