--- a/skills.html
+++ b/skills.html
@@ -182,11 +182,11 @@
                             <div>
                                 <h3 class="f-title">Quick Links</h3>
                                 <ul class="f_list">
-                                    <li style="display: inline;"><a href="#"> Home </a> | </li>
+                                    <li style="display: inline;"><a href="index.html"> Home </a> | </li>
                                     <li style="display: inline;"><a href="education.html"> Education </a> | </li>
                                     <li style="display: inline;"><a href="internships.html"> Internships </a> | </li>
                                     <li style="display: inline;"><a href="trainings.html"> Trainings </a> | </li>
-                                    <li style="display: inline;"><a href="skills.html"> Skills </a></li>
+                                    <li style="display: inline;"><a href="#"> Skills </a></li>
                                 </ul>
                             </div>
                         </div>
