--- a/profile/index.html
+++ b/profile/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=0.8">
+        <title>BMV's Profile</title>
         <script src="jquery-1.11.3.min.js"></script>
         <script src="bootstrap.min.js"></script>
         <link rel="icon" href="images/me.jpg">
@@ -39,7 +40,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="trainings.html">Trainings</a>
                   </li>
-                 
+                  <li class="nav-item">
+                    <a class="nav-link" href="projects.html">Projects</a>
+                  </li>
                 </ul>
               </div>
               <span class="navbar-text small  mt-1 w-50 text-right order-1 order-md-last d-none d-sm-none d-md-none d-lg-block">
@@ -71,7 +74,8 @@
                                     <li style="display: inline;"><a href="education.html"> Education </a> | </li>
                                     <li style="display: inline;"><a href="internships.html"> Internships </a> | </li>
                                     <li style="display: inline;"><a href="trainings.html"> Trainings </a> | </li>
-                                    <li style="display: inline;"><a href="skills.html"> Skills </a></li>
+                                    <li style="display: inline;"><a href="skills.html"> Skills </a> | </li>
+                                    <li style="display:inline;"><a href="projects.html">Projects</a></li>
                                 </ul>
                             </div>
                         </div>
