--- a/profile/trainings.html
+++ b/profile/trainings.html
@@ -2,6 +2,7 @@
 <html>
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=0.7">
+      <title>BMV's Profile</title>
         <script src="jquery-1.11.3.min.js"></script>
         <script src="bootstrap.min.js"></script>
         <link rel="icon" href="images/me.jpg">
@@ -38,6 +39,9 @@
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="#">Trainings</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="projects.html">Projects</a>
                   </li>
                   
                 </ul>
@@ -158,11 +162,12 @@
                             <div>
                                 <h3 class="f-title">Quick Links</h3>
                                 <ul class="f_list">
-                                    <li style="display: inline;"><a href="#"> Home </a> | </li>
+                                    <li style="display: inline;"><a href="index.html"> Home </a> | </li>
                                     <li style="display: inline;"><a href="education.html"> Education </a> | </li>
                                     <li style="display: inline;"><a href="internships.html"> Internships </a> | </li>
-                                    <li style="display: inline;"><a href="trainings.html"> Trainings </a> | </li>
-                                    <li style="display: inline;"><a href="skills.html"> Skills </a></li>
+                                    <li style="display: inline;"><a href="#"> Trainings </a> | </li>
+                                    <li style="display: inline;"><a href="skills.html"> Skills </a> | </li>
+                                    <li style="display:inline;"><a href="projects.html">Projects</a></li>
                                 </ul>
                             </div>
                         </div>
