--- a/profile/index.html
+++ b/profile/index.html
@@ -38,11 +38,12 @@
                     <a class="nav-link" href="internships.html">Internships</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="trainings.html">Trainings</a>
-                  </li>
-                  <li class="nav-item">
                     <a class="nav-link" href="projects.html">Projects</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="trainings.html">Trainings</a>
+                  </li>
+                  
                 </ul>
               </div>
               <span class="navbar-text small  mt-1 w-50 text-right order-1 order-md-last d-none d-sm-none d-md-none d-lg-block">
@@ -72,10 +73,10 @@
                                 <ul class="f_list">
                                     <li style="display: inline;"><a href="#"> Home </a> | </li>
                                     <li style="display: inline;"><a href="education.html"> Education </a> | </li>
-                                    <li style="display: inline;"><a href="internships.html"> Internships </a> | </li>
-                                    <li style="display: inline;"><a href="trainings.html"> Trainings </a> | </li>
                                     <li style="display: inline;"><a href="skills.html"> Skills </a> | </li>
-                                    <li style="display:inline;"><a href="projects.html">Projects</a></li>
+                                    <li style="display: inline;"><a href="internships.html"> Internships </a> | </li>
+                                    <li style="display:inline;"><a href="projects.html">Projects</a> | </li>
+                                    <li style="display: inline;"><a href="trainings.html"> Trainings </a></li>
                                 </ul>
                             </div>
                         </div>
