--- a/profile/trainings.html
+++ b/profile/trainings.html
@@ -37,12 +37,13 @@
                   <li class="nav-item ">
                     <a class="nav-link" href="internships.html">Internships</a>
                   </li>
-                  <li class="nav-item active">
-                    <a class="nav-link" href="#">Trainings</a>
-                  </li>
                   <li class="nav-item">
                     <a class="nav-link" href="projects.html">Projects</a>
                   </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">Trainings</a>
+                  </li>
+                  
                   
                 </ul>
               </div>
@@ -162,12 +163,12 @@
                             <div>
                                 <h3 class="f-title">Quick Links</h3>
                                 <ul class="f_list">
-                                    <li style="display: inline;"><a href="index.html"> Home </a> | </li>
-                                    <li style="display: inline;"><a href="education.html"> Education </a> | </li>
-                                    <li style="display: inline;"><a href="internships.html"> Internships </a> | </li>
-                                    <li style="display: inline;"><a href="#"> Trainings </a> | </li>
-                                    <li style="display: inline;"><a href="skills.html"> Skills </a> | </li>
-                                    <li style="display:inline;"><a href="projects.html">Projects</a></li>
+                                  <li style="display: inline;"><a href="index.html"> Home </a> | </li>
+                                  <li style="display: inline;"><a href="education.html"> Education </a> | </li>
+                                  <li style="display: inline;"><a href="skills.html"> Skills </a> | </li>
+                                  <li style="display: inline;"><a href="internships.html"> Internships </a> | </li>
+                                  <li style="display:inline;"><a href="projects.html">Projects</a> | </li>
+                                  <li style="display: inline;"><a href="#"> Trainings </a></li>
                                 </ul>
                             </div>
                         </div>
