--- a/projects.html
+++ b/projects.html
@@ -44,12 +44,13 @@
                   <li class="nav-item ">
                     <a class="nav-link" href="#">Internships</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="trainings.html">Trainings</a>
-                  </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="projects.html">Projects</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="trainings.html">Trainings</a>
+                  </li>
+                  
                  
                 </ul>
               </div>
@@ -128,12 +129,12 @@
                             <div>
                                 <h3 class="f-title">Quick Links</h3>
                                 <ul class="f_list">
-                                    <li style="display: inline;"><a href="index.html"> Home </a> | </li>
-                                    <li style="display: inline;"><a href="education.html"> Education </a> | </li>
-                                    <li style="display: inline;"><a href="internships.html"> Internships </a> | </li>
-                                    <li style="display: inline;"><a href="trainings.html"> Trainings </a> | </li>
-                                    <li style="display: inline;"><a href="skills.html"> Skills </a> | </li>
-                                    <li style="display:inline;"><a href="#">Projects</a></li>
+                                  <li style="display: inline;"><a href="index.html"> Home </a> | </li>
+                                  <li style="display: inline;"><a href="education.html"> Education </a> | </li>
+                                  <li style="display: inline;"><a href="skills.html"> Skills </a> | </li>
+                                  <li style="display: inline;"><a href="internships.html"> Internships </a> | </li>
+                                  <li style="display:inline;"><a href="#">Projects</a> | </li>
+                                  <li style="display: inline;"><a href="trainings.html"> Trainings </a></li>
                                 </ul>
                             </div>
                         </div>
