--- a/projects.html
+++ b/projects.html
@@ -42,10 +42,10 @@
                     <a class="nav-link" href="skills.html">Skills</a>
                   </li>
                   <li class="nav-item ">
-                    <a class="nav-link" href="#">Internships</a>
+                    <a class="nav-link" href="internships.html">Internships</a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="projects.html">Projects</a>
+                    <a class="nav-link" href="#">Projects</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="trainings.html">Trainings</a>
