--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="index.css">
         <link rel="prerender" href="education.html">
     </head>
+    <script>$(window).load(function(){$(".se-pre-con").fadeOut("slow");;});</script>
     <body>
         
           <div class="contanier-fluid" id="container1" style="padding-top: 0;">
