--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="bootstrap.min.css">
         <link rel="stylesheet" href="index.css">
-        <link rel="prerender" href="home.html">
-        <link rel="prerender" href="education.html">
-        <link rel="prerender" href="skills.html">
-        <link rel="prerender" href="internships.html">
-        <link rel="prerender" href="trainings.html">
-        <link rel="prerender" href="projects.html">
+        <link rel="prefetch" href="home.html">
+        <link rel="prefetch" href="education.html">
+        <link rel="prefetch" href="skills.html">
+        <link rel="prefetch" href="internships.html">
+        <link rel="prefetch" href="trainings.html">
+        <link rel="prefetch" href="projects.html">
     </head>
     <body>
         <div class="container-fluid" id="container0">
