--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
                     <button class="nav-link" onclick="return(showhome())">Home</button>
                   </li>
                   <li class="nav-item" id="aedu">
-                    <a class="nav-link" onclick="return(showeducation())">Education</a>
+                    <button class="nav-link" onclick="return(showeducation())">Education</button>
                   </li>
                   <li class="nav-item " id="aski">
-                    <a class="nav-link" onclick="return(showskills())">Skills</a>
+                    <button class="nav-link" onclick="return(showskills())">Skills</button>
                   </li>
                   <li class="nav-item" id="aint">
-                    <a class="nav-link" onclick="return(showinternships())">Internships</a>
+                    <button class="nav-link" onclick="return(showinternships())">Internships</button>
                   </li>
                   <li class="nav-item" id="apro">
-                    <a class="nav-link" onclick="return(showprojects())">Projects</a>
+                    <button class="nav-link" onclick="return(showprojects())">Projects</button>
                   </li>
                   <li class="nav-item" id="atra">
-                    <a class="nav-link" onclick="return(showtrainings())">Trainings</a>
+                    <button class="nav-link" onclick="return(showtrainings())">Trainings</button>
                   </li>
                   
                 </ul>
