--- a/skills.html
+++ b/skills.html
@@ -17,7 +17,7 @@
             <div id="content" style="padding-top: 0;">
                 <div class="container-fluid row" id="skills_tile">
                     <div class="col-md-4 col-sm-6 col-xs-12" id="tile" href="#">
-                      <div class="responsivecard animation-element slide-left">
+                      <div class="responsivecard animation-element slide-left" style="background-color: #343a40;color:white;">
                         <img src="images/c.webp" height="80px" width="80px" alt="">
                         <div id="text">
                         <span>C Programming (intermediate)</span>
@@ -25,7 +25,7 @@
                       </div> 
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12" id="tile" href="#">
-                        <div class="responsivecard animation-element">
+                        <div class="responsivecard animation-element" style="background-color: #343a40;color:white;">
                           <img src="images/java.jpg" height="80px" width="110px" alt="">
                           <div id="text">
                           <span>Java (intermediate)</span>
@@ -33,7 +33,7 @@
                         </div> 
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12" id="tile" href="#">
-                        <div class="responsivecard animation-element slide-right">
+                        <div class="responsivecard animation-element slide-right" style="background-color: #343a40;color:white;">
                           <img src="images/python.png" height="80px" width="80px" alt="">
                           <div id="text">
                           <span>Python (intermediate)</span>
@@ -41,7 +41,7 @@
                         </div> 
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12" id="tile" href="#">
-                        <div class="responsivecard animation-element slide-left">
+                        <div class="responsivecard animation-element slide-left" style="background-color: #343a40;color:white;">
                           <img src="images/r.svg" height="80px" width="80px" alt="">
                           <div id="text">
                           <span>R Programming (intermediate)</span>
@@ -49,7 +49,7 @@
                         </div> 
                       </div>
                       <div class="col-md-4 col-sm-6 col-xs-12" id="tile" href="#">
-                          <div class="responsivecard animation-element">
+                          <div class="responsivecard animation-element" style="background-color: #343a40;color:white;">
                             <img src="images/html.png" height="80px" width="80px" alt="">
                             <div id="text">
                             <span>HTML (intermediate)</span>
@@ -57,7 +57,7 @@
                           </div> 
                       </div>
                       <div class="col-md-4 col-sm-6 col-xs-12" id="tile" href="#">
-                          <div class="responsivecard animation-element slide-right">
+                          <div class="responsivecard animation-element slide-right" style="background-color: #343a40;color:white;">
                             <img src="images/css.png" height="80px" width="60px" alt="">
                             <div id="text">
                             <span>CSS (intermediate)</span>
@@ -65,7 +65,7 @@
                           </div> 
                       </div>
                       <div class="col-md-4 col-sm-6 col-xs-12" id="tile" href="#">
-                        <div class="responsivecard animation-element slide-left">
+                        <div class="responsivecard animation-element slide-left" style="background-color: #343a40;color:white;">
                           <img src="images/javascript.png" height="80px" width="130px" alt="">
                           <div id="text">
                           <span>JavaScript (intermediate)</span>
@@ -73,7 +73,7 @@
                         </div> 
                       </div>
                       <div class="col-md-4 col-sm-6 col-xs-12" id="tile" href="#">
-                          <div class="responsivecard animation-element">
+                          <div class="responsivecard animation-element" style="background-color: #343a40;color:white;">
                             <img src="images/json.png" height="80px" width="80px" alt="">
                             <div id="text">
                             <span>JSON (intermediate)</span>
@@ -81,7 +81,7 @@
                           </div> 
                       </div>
                       <div class="col-md-4 col-sm-6 col-xs-12" id="tile" href="#">
-                          <div class="responsivecard animation-element slide-right">
+                          <div class="responsivecard animation-element slide-right" style="background-color: #343a40;color:white;">
                             <img src="images/ajax.png" height="80px" width="110px" alt="">
                             <div id="text">
                             <span>AJAX (intermediate)</span>
@@ -89,7 +89,7 @@
                           </div> 
                       </div>
                       <div class="col-md-4 col-sm-6 col-xs-12" id="tile" href="#">
-                        <div class="responsivecard animation-element slide-left">
+                        <div class="responsivecard animation-element slide-left" style="background-color: #343a40;color:white;">
                           <img src="images/jquery.png" height="80px" width="80px" alt="">
                           <div id="text">
                           <span>Jquery (intermediate)</span>
@@ -97,7 +97,7 @@
                         </div> 
                       </div>
                       <div class="col-md-4 col-sm-6 col-xs-12" id="tile" href="#">
-                        <div class="responsivecard animation-element">
+                        <div class="responsivecard animation-element" style="background-color: #343a40;color:white;">
                           <img src="images/php.png" height="80px" alt="">
                           <div id="text">
                           <span>PHP (intermediate)</span>
@@ -105,7 +105,7 @@
                         </div> 
                       </div>
                       <div class="col-md-4 col-sm-6 col-xs-12" id="tile" href="#">
-                          <div class="responsivecard animation-element slide-right">
+                          <div class="responsivecard animation-element slide-right" style="background-color: #343a40;color:white;">
                             <img src="images/react.png" height="80px" width="110px" alt="">
                             <div id="text">
                             <span>React (beginner)</span>
@@ -113,7 +113,7 @@
                           </div> 
                       </div>
                       <div class="col-md-4 col-sm-6 col-xs-12" id="tile" href="#">
-                        <div class="responsivecard animation-element slide-left">
+                        <div class="responsivecard animation-element slide-left" style="background-color: #343a40;color:white;">
                           <img src="images/flutter.jpg" height="80px" width="80px" alt="">
                           <div id="text">
                           <span>Flutter (intermediate)</span>
@@ -121,7 +121,7 @@
                         </div> 
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12" id="tile" href="#">
-                      <div class="responsivecard animation-element">
+                      <div class="responsivecard animation-element" style="background-color: #343a40;color:white;">
                         <img src="images/dart.png" height="80px" width="80px" alt="">
                         <div id="text">
                         <span>Dart (intermediate)</span>
