--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                             <div>
                                 <h3 class="f-title">Quick Links</h3>
                                 <ul class="f_list">
-                                    <li style="display: inline;"><a href="#"> Home </a> | </li>
-                                    <li style="display: inline;"><a href="education.html"> Education </a> | </li>
-                                    <li style="display: inline;"><a href="skills.html"> Skills </a> | </li>
-                                    <li style="display: inline;"><a href="internships.html"> Internships </a> | </li>
-                                    <li style="display:inline;"><a href="projects.html">Projects</a> | </li>
-                                    <li style="display: inline;"><a href="trainings.html"> Trainings </a></li>
+                                    <li style="display: inline;"><button onclick="return(showhome())"> Home </button> | </li>
+                                    <li style="display: inline;"><button onclick="return(showeducation())"> Education </button> | </li>
+                                    <li style="display: inline;"><button onclick="return(showskills())"> Skills </button> | </li>
+                                    <li style="display: inline;"><button onclick="return(showinternships())"> Internships </button> | </li>
+                                    <li style="display:inline;"><button onclick="return(showprojects())">Projects</button> | </li>
+                                    <li style="display: inline;"><button onclick="return(showtrainings())"> Trainings </button></li>
                                 </ul>
                             </div>
                         </div>
