--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="keywords" content="bindhu madhava varma,bindu madhava varma,bindhu,madhava,varma,bindhumadhavavarma profile">
       <meta name="author" content="bindhu madhava varma">
       <meta name="viewport" content="width=device-width, initial-scale=0.8">
-        <title>BMV's Profile</title>
+        <title>Bindhu Madhava Varma</title>
 
         <script src="jquery-1.11.3.min.js"></script>
         <script src="bootstrap.min.js"></script>
