--- a/profile/index.html
+++ b/profile/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+      <meta name="description" content="C Bindhu Madhava Varma, I am currently a student at VIT AP pursuing my Bachelor's degree in CSE specialization in Data Analytics. I love programming and currently working as a software team member at SEDS-Projects VIT. I like exploring
+      about new technologies and learning new programming languages.">
+      <meta name="keywords" content="bindhu madhava varma,bindu madhava varma,bindhu,madhava,varma,bindhumadhavavarma profile">
+      <meta name="author" content="bindhu madhava varma">
       <meta name="viewport" content="width=device-width, initial-scale=0.8">
-        <title>BMV's Profile</title>
+        <title>Bindhu Madhava Varma</title>
+
         <script src="jquery-1.11.3.min.js"></script>
         <script src="bootstrap.min.js"></script>
         <link rel="icon" href="images/me.jpg">
@@ -104,7 +109,7 @@
             </div>
           </footer>
     </body>
-    <script type="text/javascript">
+    <script>
       function iframeLoaded() {
       var iFrameID = document.getElementById('idIframe');
       if (iFrameID) {
