--- a/profile/education.html
+++ b/profile/education.html
@@ -2,7 +2,8 @@
 <html>
     <head>
       <meta name="viewport" content="width=device-width,  initial-scale=0.7">
-      <title>BMV's Profile</title>
+      <title>Bindhu Madhava Varma</title>
+      <meta name=”robots” content=”noindex,nofollow”>
         <script src="jquery-1.11.3.min.js"></script>
         <script src="bootstrap.min.js"></script>
         <link rel="icon" href="images/me.jpg">
