created my resume

--- a/mahentech/index.html
+++ b/mahentech/index.html
@@ -174,3 +174,19 @@
 
 </body>
 </html>
+<form onsubmit="return additem()">
+    <input type="text" id="nameinp" name="nameinp">
+    <button type="submit"></button>
+</form>
+<div id="container">
+
+
+</div>
+<script>
+function additem(){
+    var inputname=document.getElementById('nameinp').value;
+    document.getElementById('container').append='<div>kjhdskfawhskdjhsijhijash</div>'
+
+    return false;
+}
+</script>
