--- a/Jittu/index.html
+++ b/Jittu/index.html
@@ -1,33 +1,50 @@
 
-<!DOCTYPE html>
-<html>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/png" href="Background.jpeg">
-</head>
-<body>
-  <div id="container">
-    <div id="header">
-      <h1>Web Weather</h1>
-    </div>
-    <div id="body">
-      <div>To Know weather updates in your city click <a href="weatherApp.html">here</a></div> 
-    </div>
-    <div id="features">
-      <h2 style="margin: 0px;text-decoration: underline;">Features</h2>
-      <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eveniet,
-        porro nostrum veniam dignissimos laudantium? Officiis reprehenderit, ipsa corrupti 
-        error quasi, vero dolorem facilis ab tempora adipisci dicta quibusdam mollitia.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eveniet,
-        porro nostrum veniam dignissimos laudantium? Officiis reprehenderit, ipsa corrupti 
-        error quasi, vero dolorem facilis ab tempora adipisci dicta quibusdam mollitia.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eveniet,
-        porro nostrum veniam dignissimos laudantium? Officiis reprehenderit, ipsa corrupti 
-        error quasi, vero dolorem facilis ab tempora adipisci dicta quibusdam mollitia.
-      </div>
-    </div>
+<form onsubmit="return additem()" name="form">
+    <label for="naeme">name <span style="color: red;">*</span></label>
+    <input type="text" id="name">
+    <input type="text" id="reg">
+    <input type="text" id="name2">
+    <input type="text" id="name3">
+    <input type="submit">
+</form>
+<div class="container grid-container" id="container">
+  <div class="grid-item">
+      name1
   </div>
-</body>
-</html>
+  <div class="grid-item">
+    name1
+</div>
+<div class="grid-item">
+  name1
+</div>
+<div class="grid-item">
+  name1
+</div>
+</div>
+<style>
+  .grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  padding: 10px;
+}
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 2px solid rgba(0, 0, 0, 0.8);
+  text-align: center;
+}
+</style>
+
+<script>
+  function additem(){
+    console.log("working");
+    var name=document.getElementById('name').value;
+    var reg=document.getElementById('reg').value;
+    var name2=document.getElementById('name2').value;
+    var name3=document.getElementById('name3').value;
+  
+    document.getElementById('container').innerHTML+='<div class="grid-item">'+name+'\
+      </div><div class="grid-item">'+reg+'</div><div class="grid-item">'+name2+'</div>\
+      <div class="grid-item">'+name3+'</div>';
+      return false;
+  }
+</script>
