--- a/projects.html
+++ b/projects.html
@@ -103,6 +103,16 @@
                                 </p>
                             </div>
                         </div>
+                        
+                        <div class="project">
+                            <div class="description">
+                                <div class="title">Agastya Careers</div>
+                                <div class="link"><a target="_blank" href="https://vmltennis.in/">https://vmltennis.in</a></div>
+                                <p>
+                                    VML Tennis academy is a sports club in Vijayawada that provides tennis trainings to studesnt on various levels including state and national level tournaments. I got a chance to make a landing page for them and I did my best to do it.
+                                </p>
+                            </div>
+                        </div>
                         <div class="project">
                             <div class="description">
                                 <div class="title">Profile Website</div>
