--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <p>
                     <h1 align="center">Hi 👋, I&#39;m Bindhu Madhava Varma</h1>
                     </p>
-                    <h4 align="center">A passionate Software Engineer from Bangalore, India. Currently working as a Software Engineer at <a target="_blank" href="https://shell.com">.Shell</a></h4>
+                    <h4 align="center">A passionate Software Engineer from Bangalore, India. Currently working as a Software Engineer at <a target="_blank" href="https://www.shell.com">Shell.</a></h4>
                 </div>
 
             </div>
