--- a/skills.html
+++ b/skills.html
@@ -44,7 +44,7 @@
             </div>
             <div class="rightMain col-md-9 transition-swipedown" id="swup">
                 <div class="inner" style="overflow-x: hidden;">
-                    <div class="container-fluid row" id="skills_tile">
+                    <div id="skills_tile">
                         <div id="user-content-toc">
                             <h2 style="text-align: center;">Technologies That I Know👨🏻‍💻</h2>
                         </div>
