--- a/skills.html
+++ b/skills.html
@@ -44,17 +44,15 @@
             </div>
             <div class="rightMain col-md-9 transition-swipedown" id="swup">
                 <div class="inner" style="overflow-x: hidden;">
-                    <div id="skills_tile">
-                        <div id="user-content-toc">
-                            <h2 style="text-align: center;">Technologies That I Know👨🏻‍💻</h2>
-                        </div>
-                        <!--tech stack icons-->
-                        <p align="center">
-                            <a href="https://skillicons.dev">
-                                <img style="width: 90%;margin: 0 auto;"
-                                    src="https://skillicons.dev/icons?i=androidstudio,azure,bootstrap,c,cs,cloudflare,css,dart,discord,docker,dotnet,express,figma,firebase,flask,flutter,git,github,html,java,js,jquery,mongodb,mysql,nodejs,php,postgres,postman,py,r,react,redux,sass,tailwind,ts,visualstudio,vscode&perline=9" />
-                            </a>
-                        </p>
+                    <div id="user-content-toc">
+                        <h2 style="text-align: center;">Technologies That I Know👨🏻‍💻</h2>
+                    </div>
+                    <!--tech stack icons-->
+                    <div class="text-center">
+                        <a href="https://skillicons.dev">
+                            <img style="width: 90%;margin: 0 auto;"
+                                src="https://skillicons.dev/icons?i=androidstudio,azure,bootstrap,c,cs,cloudflare,css,dart,discord,docker,dotnet,express,figma,firebase,flask,flutter,git,github,html,java,js,jquery,mongodb,mysql,nodejs,php,postgres,postman,py,r,react,redux,sass,tailwind,ts,visualstudio,vscode&perline=9" />
+                        </a>
                     </div>
                 </div>
 
