--- a/skills.html
+++ b/skills.html
@@ -51,7 +51,7 @@
                     <div class="text-center">
                         <a href="https://skillicons.dev">
                             <img style="width: 90%;margin: 0 auto;"
-                                src="https://skillicons.dev/icons?i=androidstudio,azure,bootstrap,c,cs,cloudflare,css,dart,discord,docker,dotnet,express,figma,firebase,flask,flutter,git,github,html,java,js,jquery,mongodb,mysql,nodejs,php,postgres,postman,py,r,react,redux,sass,tailwind,ts,visualstudio,vscode&perline=9" />
+                                src="https://skillicons.dev/icons?i=androidstudio,azure,bootstrap,c,cs,cloudflare,css,dart,docker,dotnet,express,figma,firebase,flask,flutter,git,github,html,java,js,jquery,mongodb,mysql,nodejs,php,postgres,postman,py,r,react,redux,sass,tailwind,ts,visualstudio,vscode&perline=9" />
                         </a>
                     </div>
                 </div>
