--- a/skills.html
+++ b/skills.html
@@ -48,11 +48,51 @@
                         <h2 style="text-align: center;">Technologies That I Know👨🏻‍💻</h2>
                     </div>
                     <!--tech stack icons-->
-                    <div class="text-center">
-                        <a href="https://skillicons.dev">
-                            <img style="width: 90%;margin: 0 auto;"
-                                src="https://skillicons.dev/icons?i=androidstudio,azure,bootstrap,c,cs,cloudflare,css,dart,docker,dotnet,express,figma,firebase,flask,flutter,git,github,html,java,js,jquery,mongodb,mysql,nodejs,php,postgres,postman,py,r,react,redux,sass,tailwind,ts,visualstudio,vscode&perline=9" />
-                        </a>
+                    <div class="row text-center">
+                        <div class="col-lg-2 col-md-3 col-4">
+                            <img 
+                                src="https://skillicons.dev/icons?i=androidstudio" />
+                        </div>
+                        <div class="col-lg-2 col-md-3 col-4">
+                            <img 
+                                src="https://skillicons.dev/icons?i=androidstudio" />
+                        </div>
+                        <div class="col-lg-2 col-md-3 col-4">
+                            <img 
+                                src="https://skillicons.dev/icons?i=androidstudio" />
+                        </div>
+                        <div class="col-lg-2 col-md-3 col-4">
+                            <img 
+                                src="https://skillicons.dev/icons?i=androidstudio" />
+                        </div>
+                        <div class="col-lg-2 col-md-3 col-4">
+                            <img 
+                                src="https://skillicons.dev/icons?i=androidstudio" />
+                        </div>
+                        <div class="col-lg-2 col-md-3 col-4">
+                            <img 
+                                src="https://skillicons.dev/icons?i=androidstudio" />
+                        </div>
+                        <div class="col-lg-2 col-md-3 col-4">
+                            <img 
+                                src="https://skillicons.dev/icons?i=androidstudio" />
+                        </div>
+                        <div class="col-lg-2 col-md-3 col-4">
+                            <img 
+                                src="https://skillicons.dev/icons?i=androidstudio" />
+                        </div>
+                        <div class="col-lg-2 col-md-3 col-4">
+                            <img 
+                                src="https://skillicons.dev/icons?i=androidstudio" />
+                        </div>
+                        <div class="col-lg-2 col-md-3 col-4">
+                            <img 
+                                src="https://skillicons.dev/icons?i=androidstudio" />
+                        </div>
+                        <div class="col-lg-2 col-md-3 col-4">
+                            <img 
+                                src="https://skillicons.dev/icons?i=androidstudio" />
+                        </div>
                     </div>
                 </div>
 
